added fibonacci series - empty file

--- a/DateTime_mod/strptime_strftime.ipynb
+++ b/DateTime_mod/strptime_strftime.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datetime.datetime.now().strftime('%B %d, %Y - %X')"
+    "datetime.datetime.now().strftime('%b %d, %Y - %X')"
    ]
   },
   {
