--- a/DateTime_mod/timedelta.ipynb
+++ b/DateTime_mod/timedelta.ipynb
@@ -217,7 +217,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "day_value = datetime.datetime.now() + datetime.timedelta(days = 1)\n",
+    "day_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"tomorrow will be {}\".format(day_value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can get it in a nice readable format like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"tomorrow will be {}\".format(day_value.strftime('%d %B, %Y')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"one week from now it will be: {}\".format(val.strftime('%B %d, %Y')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = datetime.datetime.now()\n",
+    "time.hour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hour_value = datetime.timedelta(hours = 1)\n",
+    "hour_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = time + hour_value\n",
+    "result.hour"
    ]
   }
  ],
